# orthomasker

./: INSTALL.md  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
src/ortho-masker/: cli.py  converter.py  mask_generator.py
src/orthomasker/: __init__.py  cli.py  converter.py  mask_generator.py
src/orthomasker.egg-info/: PKG-INFO
